hphp/hack/test/typecheck/function_pointer/reified_targs.php.exp
File "reified_targs.php", line 8, characters 8-12:
Creating function pointers with reified generics is not currently allowed (Typing[4362])
